pkg/temql/parse/y.output

state 0
	$accept: .start $end 

	LEFT_BRACE  shift 7
	METRIC_IDENTIFIER  shift 6
	.  error

	metric_identifier  goto 4
	expr  goto 2
	label_matchers  goto 5
	vector_selector  goto 3
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  expr.    (1)

	.  reduce 1 (src line 42)


state 3
	expr:  vector_selector.    (2)

	.  reduce 2 (src line 47)


state 4
	vector_selector:  metric_identifier.label_matchers 

	LEFT_BRACE  shift 7
	.  error

	label_matchers  goto 8

state 5
	vector_selector:  label_matchers.    (14)

	.  reduce 14 (src line 94)


state 6
	metric_identifier:  METRIC_IDENTIFIER.    (4)

	.  reduce 4 (src line 54)


state 7
	label_matchers:  LEFT_BRACE.label_match_list RIGHT_BRACE 

	error  shift 12
	IDENTIFIER  shift 11
	.  error

	label_match_list  goto 9
	label_matcher  goto 10

state 8
	vector_selector:  metric_identifier label_matchers.    (13)

	.  reduce 13 (src line 88)


state 9
	label_matchers:  LEFT_BRACE label_match_list.RIGHT_BRACE 
	label_match_list:  label_match_list.COMMA label_matcher 
	label_match_list:  label_match_list.error 

	error  shift 15
	RIGHT_BRACE  shift 13
	COMMA  shift 14
	.  error


state 10
	label_match_list:  label_matcher.    (7)

	.  reduce 7 (src line 72)


state 11
	label_matcher:  IDENTIFIER.match_op STRING 
	label_matcher:  IDENTIFIER.match_op error 
	label_matcher:  IDENTIFIER.error 

	error  shift 17
	EQL  shift 18
	.  error

	match_op  goto 16

state 12
	label_matcher:  error.    (12)

	.  reduce 12 (src line 84)


state 13
	label_matchers:  LEFT_BRACE label_match_list RIGHT_BRACE.    (5)

	.  reduce 5 (src line 56)


state 14
	label_match_list:  label_match_list COMMA.label_matcher 

	error  shift 12
	IDENTIFIER  shift 11
	.  error

	label_matcher  goto 19

state 15
	label_match_list:  label_match_list error.    (8)

	.  reduce 8 (src line 74)


state 16
	label_matcher:  IDENTIFIER match_op.STRING 
	label_matcher:  IDENTIFIER match_op.error 

	error  shift 21
	STRING  shift 20
	.  error


state 17
	label_matcher:  IDENTIFIER error.    (11)

	.  reduce 11 (src line 82)


state 18
	match_op:  EQL.    (3)

	.  reduce 3 (src line 52)


state 19
	label_match_list:  label_match_list COMMA label_matcher.    (6)

	.  reduce 6 (src line 64)


state 20
	label_matcher:  IDENTIFIER match_op STRING.    (9)

	.  reduce 9 (src line 78)


state 21
	label_matcher:  IDENTIFIER match_op error.    (10)

	.  reduce 10 (src line 80)


17 terminals, 9 nonterminals
15 grammar rules, 22/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
58 working sets used
memory: parser 9/240000
0 extra closures
14 shift entries, 1 exceptions
10 goto entries
0 entries saved by goto default
Optimizer space used: output 22/240000
22 table entries, 0 zero
maximum spread: 15, maximum offset: 14
